# llm-memory-eval

./: .env.example  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  codemeta.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: cloud-production.yaml  default.yaml  local-dev.yaml  local-pilot.yaml
data/: README.md
docker/: Dockerfile
docs/: api-reference.md  cloud-setup.md  github-setup.md  index.md  installation.md  methodology.md  quickstart.md  reproducibility.md
paper/: paper.bib  paper.md
scripts/: reproduce_results.sh  verify_environment.sh
src/llm_memory_eval/: __init__.py  __main__.py  cli.py  config.py
src/llm_memory_eval/analysis/: __init__.py  anova.py  assumptions.py  descriptive.py  paired.py  pipeline.py
src/llm_memory_eval/data/: __init__.py  download.py  length_buckets.py  prepare.py  stratify.py
src/llm_memory_eval/experiment/: __init__.py  runner.py  schema.py
src/llm_memory_eval/llm/: __init__.py  base.py  bedrock.py  factory.py  hf_endpoint.py  ollama.py  openai_compat.py  together.py
src/llm_memory_eval/memory/: __init__.py  base.py  rag.py  summarization.py
src/llm_memory_eval/metrics/: __init__.py  conversational.py  text.py
src/llm_memory_eval/reporting/: __init__.py  chapters.py  figures.py
src/llm_memory_eval/utils/: __init__.py  logging.py  seed.py  tokens.py
tests/: conftest.py  test_analysis_paired.py  test_config.py  test_length_buckets.py  test_metrics.py  test_schema.py  test_stratify.py
