[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "llm-memory-eval"
version = "0.1.0"
description = "Reproducible evaluation harness comparing Summarization-Based Memory and Retrieval-Augmented Generation for long-term conversational LLM performance."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Abuchi Okeke", email = "okekeag@gmail.com" },
]
keywords = [
    "llm",
    "rag",
    "summarization",
    "memory",
    "benchmark",
    "longbench",
    "locomo",
    "longmemeval",
    "reproducible-research",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.26,<3",
    "pandas>=2.0,<3",
    "scipy>=1.11,<2",
    "pydantic>=2.5,<3",
    "pyyaml>=6,<7",
    "typer>=0.12,<1",
    "rich>=13,<15",
    "tiktoken>=0.7,<1",
    "requests>=2.31,<3",
    "tqdm>=4.66,<5",
]

[project.optional-dependencies]
cloud = [
    "together>=1.2,<2",
    "boto3>=1.34,<2",
    "huggingface_hub>=0.24,<1",
    "openai>=1.40,<2",
]
local = [
    "sentence-transformers>=3.0,<6",
    "faiss-cpu>=1.7,<2",
    "torch>=2.1,<3",
]
viz = [
    "matplotlib>=3.8,<4",
    "kaleido>=0.2,<1",
]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.5,<1",
    "black>=24,<26",
    "mypy>=1.10,<2",
    "pre-commit>=3.7,<5",
    "types-PyYAML>=6,<7",
    "types-requests>=2.31,<3",
]

[project.scripts]
llm-memory-eval = "llm_memory_eval.cli:app"

[project.urls]
Homepage = "https://github.com/Buchiexplores/llm-memory-eval"
Repository = "https://github.com/Buchiexplores/llm-memory-eval"
Documentation = "https://github.com/Buchiexplores/llm-memory-eval/tree/main/docs"
Issues = "https://github.com/Buchiexplores/llm-memory-eval/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_memory_eval"]

[tool.hatch.build.targets.sdist]
include = [
    "src/llm_memory_eval",
    "configs",
    "scripts",
    "docs",
    "tests",
    "README.md",
    "LICENSE",
    "CITATION.cff",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "CODE_OF_CONDUCT.md",
]

[tool.ruff]
line-length = 99
target-version = "py310"
extend-exclude = ["docs", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# Typer uses Option()/Argument() as default values, and Path() defaults are
# intentional CLI defaults; these are not the mutable-default antipattern B008
# targets.
extend-immutable-calls = [
    "typer.Option",
    "typer.Argument",
    "pathlib.Path",
]

[tool.black]
line-length = 99
target-version = ["py310", "py311", "py312"]

[tool.mypy]
# Target 3.12 so mypy can parse dependency stubs that use PEP 695 `type`
# statements (e.g. NumPy 2.x's *.pyi). Runtime support for Python 3.10/3.11
# is still enforced by the test matrix in CI and by ruff (target-version py310).
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
files = ["src/llm_memory_eval"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "slow: marks tests that take longer than 5 seconds",
    "integration: marks integration tests that may need external resources",
]

[tool.coverage.run]
branch = true
source = ["src/llm_memory_eval"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
